--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <center>
     <h1> My list on the most mind blowing scenes in Breaking Bad</h1>
+    <h2>Anthony Lai</h2>
     
     <p>Number 1 - Jesse Pinkman and Walter White cooking "blue sky" crystal meth. This scene takes place in the massive lab Gus Fring built to cook meth, and he has ordered Jesse and Walter to do so.</p>
     <img src="Crystal meth.jpg">
@@ -17,7 +18,7 @@
 
     <p>Number 3 - My name is Skyler White YO. Truly one of the scenes of all time, in this scene from the second episode of the entire series, Skyler White - Walter's wife, intimidates Jesse Pinkman - who she thinks is selling weed to Walter.</p>
     <img src="Skyler White Yo.jpg">
-    
+
     <p> Don't forget, Mike is always watching. See you next time!</p>
     <img src="Mike is always watching.png">
     </center>
