--- a/index.html
+++ b/index.html
@@ -4,37 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breaking bad blogpost</title>
-    <link rel="stylesheet" href="style.css" 
-</head>
+    <link rel="stylesheet" href="style.css" </head>
 
 <body>
     <center>
-        <div class="blog-title"
-        <h1>List on the most mind blowing scenes in <span>Breaking Bad</span></h1>
-        <h2 class="myname">Anthony Lai</h2>
+        <div class="blog-title" <h1>List on the most mind blowing scenes in <span>Breaking Bad</span></h1>
+            <h2 class="myname">Anthony Lai</h2>
         </div>
 
-        <p class="topic-header">Number 1 - Jesse Pinkman and Walter White cooking "blue sky" crystal meth. This scene takes place in the
+        <p class="topic-header">Number 1 - Jesse Pinkman and Walter White cooking "blue sky" crystal meth. This scene
+            takes place in the
             massive lab Gus Fring built to cook meth, and he has ordered Jesse and Walter to do so.</p>
         <img src="Crystal meth.jpg">
 
-        <p class="topic-header">Number 2 - Jesse's Pop Corners story arc, in the rare canceled episode, Jesse discovers his love of Pop
+        <p class="topic-header">Number 2 - Jesse's Pop Corners story arc, in the rare canceled episode, Jesse discovers
+            his love of Pop
             Corners, which are so, tight, tight tight tight.</p>
-        <img src="Jesse.webp"
-            width="900">
+        <img src="Jesse.webp" width="900">
 
-        <p class="topic-header">Number 3 - My name is Skyler White YO. Truly one of the scenes of all time, in this scene from the second
+        <p class="topic-header">Number 3 - My name is Skyler White YO. Truly one of the scenes of all time, in this
+            scene from the second
             episode of the entire series, Skyler White - Walter's wife, intimidates Jesse Pinkman - who she thinks is
             selling weed to Walter.</p>
-        <img src="Skyler White Yo.jpg"
-            width="700">
+        <img src="Skyler White Yo.jpg" width="700">
 
         <p class="topic-header"> Don't forget, Mike is always watching. See you next time!</p>
         <img src="Mike is always watching.png">
-        <img class="gus"src="gus.jpg"
-            width="80"
-        
-    </center>
+        <img class="gus" src="gus.jpg" width="80" </center>
 </body>
 
 </html>
